<resources>
    <string name="app_name">Care Diary</string>

    <string name="common_save">Save</string>
    <string name="common_settings">Settings</string>
    <string name="common_ok">OK</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_error">Error</string>
    <string name="common_edit">Edit</string>
    <string name="common_delete">Delete</string>
    <string name="common_today">Today</string>

    <string name="home_new_category">New category</string>
    <string name="home_edit_category">Edit</string>
    <string name="home_delete_category">Delete</string>
    <string name="home_delete_category_dialog_title">Alert</string>
    <string name="home_delete_category_dialog_message">If you delete this category, all associated tasks and activity history will also be deleted.</string>
    <string name="home_statistics">Statistics</string>
    <string name="home_to_do_list">To-do list</string>

    <string name="add_category_title">Add Category</string>
    <string name="add_category_enter_category">Enter category</string>
    <string name="add_category_category_image">Category image:</string>
    <string name="add_category_permission_rational_camera">To continue, you need to grant permission for the camera in the settings of your device.</string>
    <string name="add_category_permission_rational_gallery">To continue, you need to grant permission to read media files in your device\'s settings.</string>
    <string name="add_category_select_image">Select image</string>
    <string name="add_category_open_camera">Open camera</string>
    <string name="add_category_open_gallery">Open gallery</string>
    <string name="add_category_error_saving">Saving file error, please, try again.</string>
    <string name="add_category_error_database">Something went wrong, please, try again.</string>
    <string name="add_category_get_temp_uri_error">Error accessing saving photos from the camera, please, try again.</string>

    <string name="task_list_new_task">Add new task</string>
    <plurals name="task_list_days_left">
        <item quantity="zero">today</item>
        <item quantity="other">%d days left</item>
    </plurals>
    <plurals name="task_list_days_ago">
        <item quantity="zero">today</item>
        <item quantity="other">%d days ago</item>
    </plurals>
    <string name="task_list_delete_task_dialog_message">Are you sure you want to delete the task «%s»? All activity history will also be deleted.</string>
    <string name="task_list_sort">Sort</string>
    <string name="task_list_sort_by_name">By name</string>
    <string name="task_list_sort_by_creation_date">By creation date</string>
    <string name="task_list_sort_by_priority">By priority</string>
    <string name="task_list_sort_by_due_date">By due date</string>

    <string name="add_task_title">Add Task</string>
    <string name="add_task_task_name">Task name</string>
    <string name="add_task_enter_task">Enter task</string>
    <string name="add_task_priority">Priority</string>
    <string name="add_task_frequency">Frequency</string>
    <string name="add_task_every">Every</string>
    <string name="add_task_current_state">Current state</string>
    <string name="add_task_state_good">Good</string>
    <string name="add_task_state_about_time">About time</string>
    <string name="add_task_note">Note</string>
    <string name="add_task_enter_note">Enter note</string>
    <string name="add_task_minus_sign">-</string>
    <string name="add_task_plus_sign">+</string>
    <string name="add_task_frequency_value_error">The value must be greater than 0</string>

    <string name="task_detail_title">Task</string>
    <string name="task_detail_priority">Priority:</string>
    <string name="task_detail_complete">Complete:</string>
    <string name="task_detail_schedule">Every:</string>
    <string name="task_detail_category">Category:</string>
    <string name="task_detail_completed_earlier">Completed earlier</string>
    <string name="task_detail_done">Done</string>
    <string name="task_detail_select_date">Select date</string>
    <string name="task_detail_delete_task_dialog_message">Are you sure you want to delete the task? All activity history will also be deleted.</string>
    <plurals name="task_detail_complete_days_left">
        <item quantity="zero">today</item>
        <item quantity="one">tomorrow</item>
        <item quantity="other">in %d days</item>
    </plurals>
    <plurals name="task_detail_complete_days_ago">
        <item quantity="zero">today</item>
        <item quantity="one">yesterday</item>
        <item quantity="other">%d days ago</item>
    </plurals>

    <string name="todo_list_title">To-do list</string>
    <string name="todo_list_period">Period</string>
    <string name="todo_list_group">Group</string>
    <string name="todo_list_group_by_date">By date</string>
    <string name="todo_list_group_by_category">By category</string>
    <plurals name="todo_list_period_days">
        <item quantity="zero">Today</item>
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>

    <plurals name="todo_list_period_weeks">
        <item quantity="zero">Today</item>
        <item quantity="one">%d week</item>
        <item quantity="other">%d weeks</item>
    </plurals>
    <string name="todo_list_period_today">Today</string>
    <string name="todo_list_period_all">All</string>

    <string name="statistics_title">Statistics</string>
    <string name="statistics_completed_tasks">Completed tasks: %d</string>
    <string name="statistics_scheduled_tasks">Scheduled tasks: %d</string>
    <string name="statistics_common_progress_chart_title">Индикатор совокупного прогресса</string>
    <string name="statistics_categories_progress_chart_title">Прогресс выполнения задач (%)</string>

    <string name="base_category_other">Other</string>
    <string name="base_category_face">Skin care</string>
    <string name="base_category_body">Body care</string>
    <string name="base_category_hair">Hair care</string>
    <string name="base_category_hands">Hand care</string>
    <string name="base_category_legs">Feet care</string>
    <string name="base_category_mouth">Oral care</string>

    <string name="base_face_category_task_day_cream">Дневной крем</string>
    <string name="base_face_category_task_night_cream">Ночной крем</string>
    <string name="base_face_category_task_massage">Массаж лица</string>
    <string name="base_face_category_task_mask">Маска</string>
    <string name="base_face_category_task_serum">Сыворотка</string>

    <string name="base_hands_category_task_cream">Крем для рук</string>
    <string name="base_hands_category_task_massage">Массаж рук</string>
    <string name="base_hands_category_task_manicure">Маникюр</string>

    <string name="base_body_category_task_cream">Крем для тела</string>
    <string name="base_body_category_task_massage">Массаж</string>

    <string name="base_hair_category_task_other">Other</string>

    <string name="base_feet_category_task_other">Other</string>

    <string name="base_oral_category_task_dentist">Dentist</string>
    <string name="base_oral_category_task_other">Other</string>

    <string name="base_other_category_task_other">Other</string>

</resources>