<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.amalkina.beautydiary.ui.home.vm.AddCategoryViewModel" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingTop="24dp"
        android:paddingEnd="24dp"
        android:paddingBottom="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?textAppearanceHeadline6"
            android:gravity="start"
            android:text="@string/add_category_select_image" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/ic_add_camera_photo"
            android:onClick="@{() -> vm.onClickCamera()}"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/add_category_open_camera"
            app:cornerRadius="8dp"
            app:icon="@drawable/ic_add_camera_photo"
            app:iconGravity="textStart" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="@{() -> vm.onClickGallery()}"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/add_category_open_gallery"
            app:cornerRadius="8dp"
            app:icon="@drawable/ic_add_gallery_photo"
            app:iconGravity="textStart" />

    </LinearLayout>

</layout>
