<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.beautydiary.home.vm.HomeViewModel" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="24dp"
        android:paddingBottom="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:gravity="start"
            android:text="@{vm.selectedCategory.name}"
            android:textAppearance="?textAppearanceHeadline6"
            tools:text="@string/base_category_body" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{() -> vm.onEditCategory()}"
            android:padding="8dp"
            android:text="@string/home_edit_category"
            android:textAppearance="?attr/textAppearanceBody1" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/background_divider_gradient" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{() -> vm.onDeleteCategory()}"
            android:padding="8dp"
            android:text="@string/home_delete_category"
            android:textAppearance="?attr/textAppearanceBody1" />

    </LinearLayout>
</layout>
