<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.amalkina.beautydiary.ui.home.vm.AddCategoryViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_back_arrow"
                app:title="@{vm.fragmentTitle}">

                <com.google.android.material.button.MaterialButton
                    style="@style/OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="12dp"
                    android:enabled="@{vm.isSaveButtonEnabled}"
                    android:onClick="@{()->vm.onSaveClick()}"
                    android:text="@string/common_save"
                    app:icon="@drawable/ic_save"
                    app:iconGravity="start"
                    app:iconPadding="4dp" />

            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/layout_fragment_margin"
            android:orientation="vertical"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                app:boxBackgroundColor="?android:colorBackground"
                app:boxStrokeColor="?attr/colorOnPrimary"
                app:boxStrokeWidthFocused="1dp"
                app:counterEnabled="true"
                app:counterMaxLength="40"
                app:placeholderText="@string/add_category_enter_category">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text|textCapWords|textAutoComplete"
                    android:maxLength="40"
                    android:maxLines="1"
                    app:isFocused="@{true}"
                    app:textWithSelection="@={vm.selectedCategoryTitle}" />
            </com.google.android.material.textfield.TextInputLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/layout_fragment_margin"
                android:layout_weight="1">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/add_category_category_image"
                    android:scaleType="centerCrop"
                    app:imageBitmap="@{vm.selectedCategoryBitmap}"
                    app:imageDrawable="@{vm.selectedCategoryDrawable}" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|end"
                    android:layout_margin="8dp"
                    android:onClick="@{() -> vm.onChangeImageClick()}"
                    android:src="@drawable/ic_camera"
                    app:cardCornerRadius="16dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingStart="12dp"
                        android:paddingTop="2dp"
                        android:paddingEnd="12dp"
                        android:paddingBottom="2dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_camera" />
                </com.google.android.material.card.MaterialCardView>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:background="?attr/colorPrimary"
                android:padding="16dp">

                <com.weigan.loopview.LoopView
                    android:id="@+id/loop_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/colorPrimary"
                    app:awv_itemsVisibleCount="7"
                    app:awv_textsize="14"
                    app:goneIf="@{vm.isEditMode}" />
            </FrameLayout>
        </LinearLayout>

        <include
            layout="@layout/include_loading_view"
            app:isLoading="@{vm.isLoading}" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>